--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,22 +1,29 @@
-name: cd
+deploy:
+  name: Deploy
+  runs-on: ubuntu-latest
 
-on:
-  push:
-    branches: [main]
+  steps:
+    - name: Check out code
+      uses: actions/checkout@v4
 
-jobs:
-  deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: "1.25.1"
 
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v4
+    - name: Build Prod app
+      run: ./scripts/buildprod.sh
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "1.25.1"
+    - id: auth
+      uses: google-github-actions/auth@v2
+      with:
+        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
-      - name: Build Prod app
-        run: ./scripts/buildprod.sh
+    - name: Set up Cloud SDK
+      uses: google-github-actions/setup-gcloud@v3
+
+    - name: Use gcloud CLI
+      run: gcloud info
+
+    - name: Build cloud image
+      run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-474309/notely-ar-repo/notely-app-prod:latest
