--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,4 +35,7 @@ jobs:
       - name: Build cloud image
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-474309/notely-ar-repo/notely-app-prod:latest
 
+      - name: Deploy to Cloud Run
+        run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-474309/notely-ar-repo/notely-app-prod:latest --region us-ventral1 --allow-unauthenticated --project notely-474309 --max-instances=4
+
   
