--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,9 +5,13 @@ on:
     branches: [main]
 
 jobs:
+
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
     steps:
       - name: Check out code
@@ -17,6 +21,9 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.25.1"
+
+      - name: Install Goose for Migrations
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
 
       - name: Build Prod app
         run: ./scripts/buildprod.sh
@@ -34,6 +41,9 @@ jobs:
 
       - name: Build cloud image
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-474309/notely-ar-repo/notely-app-prod:latest
+
+      - name: Run Migrations
+        run: ./scripts/migrateup.sh
 
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-474309/notely-ar-repo/notely-app-prod:latest --region us-central1 --allow-unauthenticated --project notely-474309 --max-instances=4
